--- a/main.html
+++ b/main.html
@@ -37,12 +37,12 @@
 		</li>
 		<li>
 			<video controls>
-				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="aaa" type="video/mp4">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" attr="aaa" type="video/mp4">
 			</video>
 		</li>
 		<li>
 			<audio controls>
-				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="bbb" type="audio/ogg">
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" artr="bbb" type="audio/ogg">
 			</audio>
 		</li>
 	</ol>
